project('dsa', 'cpp')

infixSrc = ['lab1/infix2postfix.cc', 'lab1/parser.cc']
executable('infix2postfix', infixSrc)

executable('queue', 'src/linear-queue.cc')
executable('cqueue', 'src/circular-queue.cc')
executable('linkedlist', 'src/linked-list.cc')
executable('arraylist', 'src/array-list.cc')


